--- a/test/testsuite.html
+++ b/test/testsuite.html
@@ -3,14 +3,13 @@
 <html>
 <head>
   <script src="../lib/jquery-1.3.2.min.js"></script>
-  <link rel="stylesheet" href="testsuite.css" type="text/css" media="screen" />
-
-  <script>
-    $(document).ready(function(){
-      // TODO tests
-    });
-  </script>
+  <script src="../lib/functional.min.js"></script>
+  <script src="../src/application.js"></script>
+  <script src="../src/db.js"></script>
+  <!-- TESTS -->
+  <script src="unit/db.js"></script>
   
+  <link rel="stylesheet" href="testsuite.css" type="text/css" media="screen" />
 </head>
 <body>
   
