--- a/test/testsuite.html
+++ b/test/testsuite.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <script src="../lib/jquery-1.3.2.min.js"></script>
+  <script src="../lib/jquery.json-1.3.min.js"></script>
   <script src="../lib/functional.min.js"></script>
   <script src="../src/application.js"></script>
   <script src="../src/db.js"></script>
