tests with gearsDB

--- a/test/testsuite.html
+++ b/test/testsuite.html
@@ -6,9 +6,12 @@
   <script src="../lib/jquery.json-1.3.min.js"></script>
   <script src="../lib/functional.min.js"></script>
   <script src="../src/application.js"></script>
+  <script src="../lib/gears_db.js"></script>
   <script src="../src/db.js"></script>
+  <script src="../src/db-gears.js"></script>
   <!-- TESTS -->
   <script src="unit/db.js"></script>
+  <script src="unit/db-gears.js"></script>
   
   <link rel="stylesheet" href="testsuite.css" type="text/css" media="screen" />
 </head>
